--- a/style.css
+++ b/style.css
@@ -22,12 +22,10 @@ body {
 
 #pos{
   color:#018571
-
 }
 
 #pos-mid{
   color:#80cdc1
-
 }
 
 
@@ -43,6 +41,7 @@ body {
 
 #textblock{
   display: inline-block;
+  width: 450px;
 }
 
 #tooltip{
@@ -99,7 +98,8 @@ body {
 
 #desc{
   margin-right: 15%;
-  width: 150px;
+  font-size: 16px;
+  width: 230px;
   align-items: left;
 }
 
